2002-03-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (CMD_Pick):
	fixed a memory leak
	allow to pick windows that have CirculateSkip set

	* acinclude.m4:
	disabled a destructing gnome_prefix logic

	* fvwm/fvwm2.1 (Example):
	corrected statement about CaptureHonorsStartsOnPage being the default

2002-03-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (CMD_ResizeMove):
	windows are mo longer hilighted after ResizeMove

2002-02-28  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1:
	fixed syntax line of Maximize

2002-02-27  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/commands.h:
	* fvwm/conditional.c (CMD_This):
	* fvwm/functions.c:
	* fvwm/functions.h:
	* fvwm/fvwm2.1:
	* NEWS:
	added new conditional command This

2002-02-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* acinclude.m4 (smr_CHECK_LIB):
	fixed a bug with variable expansion and autoconf cache values

2002-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (moveLoop):
	fixed a problem with keyboard movement vs. EdgeResistance

2002-02-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c:
	fixed problem with root bindings and xfishtank

	* fvwm/windowlist.c (CMD_WindowList):
	applied patch by to Darren Marshall to fix placement of window list on
	wrong xinerama screen

2002-02-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (PositiveWrite):
	fixed core dump when a module died in the select of PositiveWrite()

	* fvwm/icons.c (GetXPMFile):
	suppress unnecessary error message for xmb icons

2002-02-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (apply_window_updates):
	fixed propagation of window border and title colours to the modules

2002-02-03 olicha  <olivier.chapuis@free.fr>

	* NEWS: TaskBar news

2002-01-30  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	added generation of utils/fvwm24_convert

2002-01-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (RaiseOrLowerWindow):
	(restack_windows):