@@ -1,3 +1,9 @@
+2002-03-05  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmScript/Instructions.c (InitCom):
+	(MyWarpPointer):
+	fixed a compile problem on dec-osf5
+
 2002-03-03  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/conditional.c (CMD_Pick):
